Revision history for Perl extension App::Sqitch

0.953

0.952  2013-01-12T00:02:54Z
     - Switched from Moose to Mouse whever possible. Speeds load and runtime
       20-30%. Thanks to Michael Schwern for the pull request!

0.951  2013-01-08T00:21:58Z
     - Fixed double "@" displayed for tags in the output of `revert`.
     - Fixed reversion of reworked changes to run the original revert script,
       rather than the reworked script.
     - Added `is_reworked` accessor to App::Sqitch::Plan::Change.
     - Changed the behavior determining the file name to use for reworked
       change scripts. It now looks for a deploy script using the name of any
       tag between the reworked instances of a change and selects the first
       one it finds that exists. This will allow Sqitch to find the proper
       script name even if new tags have been added to the plan (issue #70).

0.950  2013-01-03T23:09:42Z
     - Fixed the "Name" header in `sqitch-rebase` so that it will actually
       show up on the CPAN search sites.
     - Fixed test failure triggered by the passage of time in `t/engine.t`.
     - At the start of a `deploy`, if the most recently deployed change has
       any unlogged tags (that is, tags added since the last `deploy`), they
       will be logged before the `deploy` continues (issue #60).
     - Added the `--no-log` option to `deploy`, `revert`, and `rebase`. This
       causes the changes to be logged as deployed without actually running
       the deploy scripts. Useful for an existing database that is being
       converted to Sqitch, and you need to log changes as deployed because
       they have been deployed by other means in the past.
     - Now check that dependencies are required for all changes to be deployed
       or reverted before deploying or reverting anything, rather than
       checking dependencies for each change just before deploying or reverting
       it. This allows a or revert deploy to fail sooner, with no database